objects/User.object
<CustomObject>
    <fields>
        <fullName>Can_Approve_Strategic_Plans__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox determines whether or not this user has the ability to approve Strategic Plans.</description>
        <inlineHelpText>Check if the user is allowed to approve strategic plans.</inlineHelpText>
        <label>Can Approve Strategic Plans</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <description>Cost Center the user belongs</description>
        <label>Cost Center</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Region__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LGNA</fullName>
                    <color>#009900</color>
                    <label>LGNA</label>
                </value>
                <value>
                    <fullName>SG</fullName>
                    <color>#3333FF</color>
                    <label>SG</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_Number__c</fullName>
        <description>The Employee Number of the user which is also an external ID in the system</description>
        <externalId>true</externalId>
        <label>Employee Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEMS_Stakeholder_Group__c</fullName>
        <label>Stakeholder Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsProposal_QueueMember_del__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This check box is manually changed to &quot;true&quot; on the user records that are a part of the Enterprise Proposal Development Team Queue. 
Used for validation rule : Proposal_Case_Lockdown</description>
        <label>IsProposal QueueMember</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Super_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the the user is a super user for the application</description>
        <inlineHelpText>Check if the the user is a super user for the application</inlineHelpText>
        <label>Super User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lan_ID__c</fullName>
        <description>The Lan ID is the unique Identifier for the user across various systems.</description>
        <externalId>true</externalId>
        <label>Lan ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Last_Opp_Activity_Date__c</fullName>
        <label>Last Opp Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Manager_of_the_User_s_Manager__c</fullName>
        <description>manager id of user&apos;s manager</description>
        <formula>Manager.ManagerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager of the User&apos;s Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <description>market segment user belongs to</description>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Small Group</fullName>
                </value>
                <value>
                    <fullName>Mid Market</fullName>
                </value>
                <value>
                    <fullName>Large Group</fullName>
                </value>
                <value>
                    <fullName>National Accounts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Used to document changes in user access</description>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Old_Dearborn_Role__c</fullName>
        <label>Old Dearborn Role</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Region the user is associated</description>
        <label>Region</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Sales__c</fullName>
        <description>Does the User&apos;s Role Name contain &apos;Sales&apos;</description>
        <formula>CONTAINS( UserRole.Name, &quot;Sales&quot; )</formula>
        <label>Role Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>casesafeId__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>casesafeId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFMembershipStatus__c</fullName>
        <label>DSProSFMembershipStatus</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFPassword__c</fullName>
        <label>DSProSFPassword</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFUsername__c</fullName>
        <description>DocuSign username</description>
        <label>DSProSFUsername</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Default_ET_Page__c</fullName>
        <label>Default Marketing Cloud Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Default_MID__c</fullName>
        <label>Default MID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetForAppExchangeAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Cloud for AppExchange Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetForAppExchangeUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Cloud for AppExchange User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetUsername__c</fullName>
        <label>Marketing Cloud Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTarget_OAuth_Token__c</fullName>
        <label>@deprecated</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>et4ae5__ValidExactTargetAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Marketing Cloud Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ValidExactTargetUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Marketing Cloud User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ltnadptn__Can_Use_Lightning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field contains a copy of the value of the user permission PermissionslightningExperienceUser.  If TRUE, this user sees a link in the profile menu to switch to Lightning or back to Classic.  If FALSE, this user cannot navigate to Lightning.</description>
        <inlineHelpText>This field contains a copy of the value of the user permission PermissionslightningExperienceUser.  If TRUE, this user sees a link in the profile menu to switch to Lightning or back to Classic.  If FALSE, this user cannot navigate to Lightning.</inlineHelpText>
        <label>Can Use Lightning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ltnadptn__Using_Lightning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, this user&apos;s next login or clicks will load Lightning.  If false, the user&apos;s next login or clicks will load Classic.  This is updated using scheduled code, so the values may lag if users have switched to Classic or Lightning from their profile menu recently.</description>
        <inlineHelpText>If true, this user&apos;s next login or clicks will load Lightning.  If false, the user&apos;s next login or clicks will load Classic.  This is updated using scheduled code, so the values may lag if users have switched to Classic or Lightning from their profile men</inlineHelpText>
        <label>Using Lightning?</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers2</fullName>
        <columns>CREATED_BY_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Region__c</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>notContain</operation>
            <value>bcbsil.com.gemsrestricted</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>ActiveUsersDS</fullName>
        <columns>CREATED_BY_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>dsfs__DSProSFUsername__c</columns>
        <columns>dsfs__DSProSFMembershipStatus__c</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Region__c</columns>
        <columns>Employee_Number__c</columns>
        <columns>Lan_ID__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users for Docusign User Managemen</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>IS_FROZEN</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator,LEX - System Administrator</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>TIMEZONE</columns>
        <columns>MANAGER</columns>
        <columns>EMPLOYEE_NUMBER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>All_ActiveSG_IL_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>Is_Super_User__c</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>SG Service Center_LEX</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>startsWith</operation>
            <value>IL</value>
        </filters>
        <label>All Active SG IL Users</label>
    </listViews>
    <listViews>
        <fullName>All_ActiveSG_TX_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>Is_Super_User__c</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>startsWith</operation>
            <value>TX</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>SG Service Center_LEX</value>
        </filters>
        <label>All Active SG TX Users</label>
    </listViews>
    <listViews>
        <fullName>All_Active_SG_OK_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>Is_Super_User__c</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>startsWith</operation>
            <value>OK</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>SG Service Center_LEX</value>
        </filters>
        <label>All Active SG OK Users</label>
    </listViews>
    <listViews>
        <fullName>By_Department</fullName>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>By Department</label>
    </listViews>
    <listViews>
        <fullName>Chatter_Free_User</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Chatter Free User</value>
        </filters>
        <label>Chatter Free User</label>
    </listViews>
    <listViews>
        <fullName>Contract_Administration</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>dsfs__DSProSFMembershipStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Contract Administration</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Contract Administration</label>
    </listViews>
    <listViews>
        <fullName>Created_by_IIQ</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>dsfs__DSProSFUsername__c</columns>
        <columns>dsfs__DSProSFPassword__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_BY_ALIAS</field>
            <operation>equals</operation>
            <value>idiq</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Created by IIQ</label>
        <sharedTo>
            <role>Executive_Management</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DEVAdminUsers</fullName>
        <booleanFilter>(1 OR 5) AND (2 AND 3 AND 4 AND 6)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>IS_FROZEN</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
            <value>mashf,nprak,kkuch,a2196,a1968,a3590,RR,LDD,a6003,Report,tsupe,sfmc</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
            <value>ssiro,padit</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>limited System Administrator</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>notEqual</operation>
            <value>Pradeep</value>
        </filters>
        <label>DEV Admin Users</label>
    </listViews>
    <listViews>
        <fullName>DocuSign_LGNA_Account_Management_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>LGNA - Account Management</value>
        </filters>
        <label>DocuSign LGNA Account Management Users</label>
    </listViews>
    <listViews>
        <fullName>DocuSign_LGNA_Sales_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>LGNA - Sales</value>
        </filters>
        <label>DocuSign LGNA Sales Users</label>
    </listViews>
    <listViews>
        <fullName>DocuSign_Underwriting</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Underwriting</value>
        </filters>
        <filters>
            <field>CORE.USERS.TITLE</field>
            <operation>contains</operation>
            <value>Under</value>
        </filters>
        <label>DocuSign Underwriting</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>